Bug 1496566 - avoid processing non-existent thread event queues; r=mccr8 a=lizzard

Just because we're calling into the component manager for a service
doesn't mean that we're on a thread that has an associated event loop to
spin.  If we are lacking such an event loop, we shouldn't try to
NS_ProcessNextEvent, because that will wind up asserting that there's no
event queue.  Instead, just yield with the expectation that some other
thread is making progress on constructing the service that we want.

--HG--
extra : source : 27c046fe369ab36d21bb9486d2048a32a582ee8f